[project]
name = "openclaw-deterministic-skill"
version = "0.5.0"
description = "Deterministic FSM kernel for LLM agent execution with event sourcing and replay"
authors = [{ name = "Ale007XD" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pydantic>=2.6"]
keywords = ["llm", "agent", "fsm", "deterministic", "event-sourcing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Ale007XD/openclaw-deterministic-skill"
Repository = "https://github.com/Ale007XD/openclaw-deterministic-skill"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
